--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DariuszMeissner/node-rtsp-to-hls#readme",
   "dependencies": {
+    "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2"
   }
