--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
-    "fluent-ffmpeg": "^2.1.2"
+    "express-rate-limit": "^7.1.5",
+    "fluent-ffmpeg": "^2.1.2",
+    "helmet": "^7.1.0",
+    "node-schedule": "^2.1.1"
   }
 }
