--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.3",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.1.0",
-    "node-schedule": "^2.1.1"
+    "node-schedule": "^2.1.1",
+    "socket.io": "^4.7.4"
   }
 }
