--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,9 +36,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "bootstrap": "^5.3.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "hls.js": "^1.5.6",
+    "react-bootstrap": "^2.10.1",
+    "react-router-dom": "^6.22.1"
   }
 }
