--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "hls.js": "^1.5.6",
     "react-bootstrap": "^2.10.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "zustand": "^4.5.1"
   }
 }
