--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "-": "^0.0.1",
     "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
