--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/DariuszMeissner/node-rtsp-to-hls#readme",
   "dependencies": {
     "-": "^0.0.1",
+    "@google-cloud/speech": "^6.3.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "bootstrap": "^5.3.3",
     "eslint": "^8.56.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "ws": "^8.16.0"
   }
 }
